# OhEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  SandboxApp.cpp
app/Sample/: Main.cpp
cmake/: Doxyfile.in  FetchExternal.cmake  Misc.cmake
code/include/: OhEngine.hpp
code/include/OhEngine/: Application.hpp  Entry.hpp  EventsManager.hpp
code/include/OhEngine/Core/: Application.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp
code/include/OhEngine/Events/: EventBase.hpp  Events.hpp  Input.hpp  KeyEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
code/include/OhEngine/Renderer/: Buffers.hpp  DisplayArea.hpp  DrawableArea.hpp  Renderer.hpp  Triangle.hpp  Vertex.hpp
code/include/OhEngine/Scene/: Model.hpp  Scene.hpp  SceneManager.hpp
code/include/OhEngine/Utils/: Globals.hpp  Logger.hpp  Precompiled.hpp  Types.hpp
code/include/OhEngine/Utils/Containers/: Bimap.hpp  Dictionary.hpp  List.hpp
code/include/OhEngine/Window/: Events.hpp  Window.hpp
code/src/OhEngine/: Application.cpp  EventsManager.cpp
code/src/OhEngine/Core/: Input.cpp
code/src/OhEngine/Events/: Events.cpp
code/src/OhEngine/Renderer/: Triangle.cpp  Vertex.cpp
code/src/OhEngine/Scene/: Model.cpp  Scene.cpp  SceneManager.cpp
code/src/OhEngine/Utils/: Logger.cpp  Precompiled.cpp
code/src/OhEngine/Window/: Events.cpp  Window.cpp
code/src/Platform/Linux/: Input.cpp  SfmlWindow.cpp
code/src/Platform/Renderers/Software/: Buffers.hpp  Renderer.cpp
code/src/Platform/SFML/: InputToString.cpp  SfmlWindow.cpp
docs/: LayerDiagram.drawio  Roadmap.md
docs/SequenceDiagrams/: Readme.md
include/OhEngine/: OhEngine.h
include/OhEngine/Application/: Application.h  EntryPoint.h
include/OhEngine/Debug/: Logger.h
include/OhEngine/Graphic/: Vertex.h
include/OhEngine/Renderer/: Renderer.h  Scene.h  Window.h
include/OhEngine/Utils/: Globals.h  Thread.h
src/Application/: Application.cpp
src/Debug/: Logger.cpp
src/Renderer/: Renderer.cpp  Scene.cpp  Window.cpp
tests/: CMakeLists.txt  Main.cpp  dummy.cpp
tests/OhEngine/Events/: InputTest.cpp
tests/Utils/Containers/: BimapTest.cpp  DictionaryTest.cpp  ListTest.cpp
